# vcheck

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/evidence/: community_reports.csv  official_scam_guidance.csv  synthetic_scam_patterns.csv  verified_domains.csv
examples/: sample_messages.json
scripts/: build_training_dataset.py  check_agent_context.py  check_datahub_context.py  create_manual_dataset.py  fetch_uci_sms.py  generate_synthetic_dataset.py  register_datahub_evidence.py  register_datahub_metadata.py  register_datahub_model.py  train_model.py
src/vcheck/: __init__.py  main.py
src/vcheck/api/: routes.py
src/vcheck/core/: __init__.py  config.py  logging.py
src/vcheck/domain/: __init__.py  models.py  rules.py
src/vcheck/ml/: dataset.py  pipeline.py  synthetic.py  training.py
src/vcheck/services/: agent_context_service.py  analyser.py  contextual_analyser.py  datahub_context.py  evidence_policy.py  ml_classifier.py  report_service.py
tests/: test_analyser.py  test_api.py  test_contextual_analyser.py  test_datahub_context.py  test_evidence_policy.py  test_ml.py  test_report_service.py
