[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "vcheck-api"
version = "0.2.0"
description = "Hybrid rules and machine-learning backend for VCheck."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Veronica Wang Wei" }
]
dependencies = [
    "acryl-datahub==1.5.0.6",
    "fastapi>=0.115,<1.0",
    "joblib>=1.4,<2.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<4.0",
    "pydantic>=2.10,<3.0",
    "scikit-learn>=1.6,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
    "graphql-core>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<10.0",
    "pytest-cov>=6.0,<8.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["vcheck"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["UP007"]